--- a/web/src/app/components/admin-dashboard/components/task/task.component.html
+++ b/web/src/app/components/admin-dashboard/components/task/task.component.html
@@ -516,7 +516,7 @@
       [class.selected_cont]="taskcontainerSelection == 1"
     >
       <p class="upperpanel_subtitle upperpanel_subBox_subtitle">
-        Tasks Due Today
+        Tasks Due 
       </p>
       <p class="upperpanel_subBox_value">
         {{ httpGetAllTask ? taskDueToday.length : 0 }}
