--- a/web/src/app/components/admin-dashboard/components/team-page/team-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/team-page/team-page.component.html
@@ -667,7 +667,7 @@
       </ng-container>
 
       <ng-container matColumnDef="TasksDueToday">
-        <mat-header-cell *matHeaderCellDef> Tasks Due Today </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> Tasks Due</mat-header-cell>
         <mat-cell *matCellDef="let element">
           {{ element.TasksDueToday }}</mat-cell
         >
