--- a/web/src/app/components/admin-dashboard/components/patientAccount/patient-vitals/patient-vitals.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patientAccount/patient-vitals/patient-vitals.component.scss
@@ -1,11 +1,3 @@
-/* .content {
-  margin:  0px 40px; 
- width: 100%;
- height: 100%;
- background-color: #e1e6ed;
-
-
-} */
 
 p {
   margin-bottom: 0rem !important;
@@ -18,9 +10,6 @@ p {
 .container {
   width: 100%;
   height: fit-content;
-  /*  height: 100%; */
-  /*   position: relative; */
-  background-color: red;
 }
 .container_panel {
   width: 100%;
@@ -33,13 +22,7 @@ p {
 }
 
 .main_panel {
-  /* display: flex;
-   width: 100%;
-   height: 100%;
-   min-height: 90vh; */
-  /*   position: relative;
-   padding-left: 40px;
-   padding-top: 40px; */
+
   display: flex;
   width: 100%;
   height: 100%;
@@ -470,15 +453,18 @@ p {
 }
 .symtomsInfoData {
   height: 50vh;
-  margin-top: 0px;
+  margin-top: 20px;
+  overflow-y: auto;	
 }
 .uploadInfoData {
   height: 65vh;
+  overflow-y: auto;	
+
 }
 .medicationInfo_table {
   width: 100%;
   height: 50vh;
-  /*  overflow-y: scroll;	 */
+   overflow-y: auto;	
 }
 
 .programInfo_menu_item button {
@@ -1796,13 +1782,13 @@ td.mat-cell:last-child {
   font-weight: 600;
   font-family: "Rubik";
 }
-.recent_vital_panel {
-  width: 100%;
-  display: block;
+// .recent_vital_panel {
+//   width: 100%;
+//   display: block;
 
-  background-color: #ffffff;
-  max-height: 500px;
-}
+//  // background-color: #ffffff;
+//   max-height: 500px;
+// }
 .recent_vital_graph_panel {
   width: 100%;
   height: 100%;
@@ -1867,17 +1853,19 @@ td.mat-cell:last-child {
   margin-bottom: 0.8rem;
 }
 .date_selected_ {
-  background-color: #164d61 !important;
+  background-color: #164d61;
   color: #ffffff;
   outline: none;
 }
 .date_not_selected {
+  background-color: #e1e6ed;
   color: #164d61;
   outline: none;
 }
-// .date_not_selected:hover {
-//   background-color: #d8dce5;
-// }
+.date_not_selected:hover {
+  background-color: #d8dce5;
+}
+
 // Medication Update Panel
 .medicationInfoData {
   height: 58vh;
@@ -2638,4 +2626,48 @@ mat-progress-spinner {
   font-size: 0.8rem;
   font-family: "Rubik";
   color: #164d61;
+}
+.summary_graph_container {
+  height: 20rem !important;
+  width: 100% !important;
+  margin-bottom: 1.87rem;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  position: relative;
+  box-sizing: border-box;
+  padding: 1rem; /* Gives space for axis labels */
+}
+
+.btn-health-panel-ClinicInfo
+{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.date_btn_panel {
+  display: flex;
+  padding: 1px;
+  height: 1.6rem;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+::ng-deep .hidden-column {
+  display: none !important;
+}
+.truncate-text {
+  display: inline-block;
+  max-width: 200px; /* adjust width as needed */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.vital_selected_ {
+  background-color: #164d61;
+  color: #ffffff;
+  outline: none;
+}
+.vital_not_selected {
+  background-color: #e1e6ed;
+  color: #164d61;
+  outline: none;
 }
