--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
@@ -739,37 +739,40 @@
                       </div>
                     </div>
                     <div class="userInfoItem">
-                      <p class="main_input_title">Preference 2</p>
+                      <p class="main_input_title">Preference 1</p>
                       <input
                         class="userInfovalue"
                         maxlength="50"
-                        placeholder="Add Preference 2"
+                        placeholder="Add Preference 1"
                         notrequired
                         formControlName="preference2"
                         id="editCallTime2"
                       />
                     </div>
                     <div class="userInfoItem">
-                      <p class="main_input_title">Preference 3</p>
+                      <p class="main_input_title">Preference 2</p>
                       <input
                         class="userInfovalue"
                         maxlength="50"
-                        placeholder="Add Preference 3"
+                        placeholder="Add Preference 2"
                         notrequired
                         formControlName="preference3"
                         id="editCallTime3"
                       />
                     </div>
                     <div class="userInfoItem">
-                      <p class="main_input_title">Preference 4</p>
-                      <input
+                      <p class="main_input_title">SMS Preference</p>
+                      <select
                         class="userInfovalue"
-                        maxlength="50"
-                        placeholder="Add Preference 4"
-                        notrequired
+                        placeholder="Select SMS Preference"
                         formControlName="preference4"
                         id="editCallTime4"
-                      />
+                        notrequired
+                      >
+                        <option value="" disabled selected>Select</option>
+                        <option value="Yes">Yes</option>
+                        <option value="No">No</option>
+                      </select>
                     </div>
 
                 </div>
