--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -2451,7 +2451,7 @@
                 </p>
               </div>
               <div class="personal_content">
-                <p class="data_title">Preference 3</p>
+                <p class="data_title">SMS Preference</p>
                 <p class="data_value">
                   {{ http_rpm_patientList["PatientDetails"].Preference3 }}
                 </p>
