138.  activityinfo-chat.component.html and .css
Introduced a css class : Force vertical text flow, Limit the message to 2 lines, Hide overflow cleanly with ellipsis, Ensure text always starts from the beginning. And Wrapped the message in a <span> on html.

144. editpatient.component.ts

editPatientProgram() and UpdatePatientInfo() both this method contain the validation. So moved validation into one place at confirm_action() and removed the validation block from the 2 methods.

78. patient-detail-page.component.ts

ngOnInit(). Added a condition (guard) to refresh the table only when the Chats tab is actually open.

145. editpatient.component.ts and .html

Earlier used getUniqueVitals() for this, but the logic is different. So added new method getAvailableVitals() which give the name of the vital don't have any error or active device.

51. editpatient.component.ts and .html

GetPatientInfo().
Master schedule list is now grouped by VitalId - Each vital sees only its schedules. Each vital now gets its own scheduleList - Template becomes stateless, No shared mutable schedule array. Smart default schedule selection added - Empty dropdowns, Wrong default schedule, Vital-specific business rules.
Deferred assignment using setTimeout - ngModel dropdown is rendered.

Schedule list source changed - Earlier, every vital was sharing the same vitalschedule, Now each PatientVitalInfo gets its own filtered schedule list, Prevents wrong schedules showing for the wrong vital. Schedule list is now conditional & safer- Avoids: Empty dropdowns, undefined binding issues
Removed hard dependency on scheduleChanged().

58. editpatient.component.ts

When UpdatePatient_Device() get called,
processMasterData(); also runs inside, so removed it.

56. editpatient.component.ts

editPatientProgram(). Change as active device mandatory to activate a patient and make active device not mandatory for reactive.

152. editpatient.component.ts

RegisterDevice(). Moved the UI update logic to run immediatel

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/Models/components/activityinfo-chat/activityinfo-chat.component.html
@@ -17,7 +17,9 @@
           <ng-container matColumnDef="LastMessage">
             <mat-header-cell *matHeaderCellDef> LastMessage </mat-header-cell>
             <mat-cell *matCellDef="let element">
-              {{ element.LastMessage }}
+              <span class="last-message-text">
+                {{ element.LastMessage }}
+              </span>
             </mat-cell>
           </ng-container>
 
