--- a/web/src/app/components/admin-dashboard/components/patientAccount/patient-vitals/patient-vitals.component.html
+++ b/web/src/app/components/admin-dashboard/components/patientAccount/patient-vitals/patient-vitals.component.html
@@ -1328,7 +1328,7 @@
             id="pd_Vital_O"
             (click)="ChangeVitalScreen('Oxygen')"
              [ngClass]="{
-              'vital_selected_': currentVital === 'BloodOxygen'
+              'vital_selected_': currentVital === 'Oxygen'
             }"
           >
             Oxygen
